NEXT-19461 - Frequently used and Recently search should work for all bubbles

--- a/src/Administration/Resources/app/administration/src/app/assets/scss/variables.scss
+++ b/src/Administration/Resources/app/administration/src/app/assets/scss/variables.scss
@@ -243,6 +243,7 @@ $z-index-select-results: 600;
 $z-index-flyout: 700;
 $z-index-off-canvas: 750;
 $z-index-search-bar-results: 800;
+$z-index-sw-page-search-bar: 650;
 $z-index-modal: 1000;
 $z-index-context-menu: 1100;
 $z-index-tooltip: 1100;
