NEXT-19224 - Add simpleBadge and error-type colors to sw-sidebar & sw-sidebar-navigation-item

--- a/src/Administration/Resources/app/administration/src/app/component/sidebar/sw-sidebar-navigation-item/sw-sidebar-navigation-item.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/sidebar/sw-sidebar-navigation-item/sw-sidebar-navigation-item.html.twig
@@ -13,9 +13,15 @@
         size="20px"
     />
     <i
-        v-if="sidebarItem.badge"
-        class="notification-badge"
+        v-if="!sidebarItem.hasSimpleBadge && sidebarItem.badge > 0"
+        class="sidebar-item-badge notification--badge"
+        :class="badgeTypeClasses"
     >{{ sidebarItem.badge }}</i>
+    <i
+        v-else-if="sidebarItem.hasSimpleBadge"
+        class="sidebar-item-badge dot--badge"
+        :class="badgeTypeClasses"
+    ></i>
     {% endblock %}
 </button>
 {% endblock %}
