NEXT-18121 - Add settings item capability extension sdk

--- a/src/Administration/Resources/app/administration/src/module/sw-settings/page/sw-settings-index/sw-settings-index.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings/page/sw-settings-index/sw-settings-index.html.twig
@@ -82,8 +82,8 @@
                                     v-for="settingsItem in settingsItems"
                                     :id="settingsItem.id"
                                     :key="settingsItem.name"
-                                    :label="$tc(settingsItem.label)"
-                                    :to="{ name: settingsItem.to }"
+                                    :label="getLabel(settingsItem)"
+                                    :to="getRouteConfig(settingsItem)"
                                     :background-enabled="settingsItem.backgroundEnabled"
                                 >
                                     <template #icon>
