NEXT-19470 - Restrict the cartAmountRule in the shipping method price

--- a/src/Administration/Resources/app/administration/src/module/sw-settings-shipping/component/sw-settings-shipping-price-matrix/sw-settings-shipping-price-matrix.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-shipping/component/sw-settings-shipping-price-matrix/sw-settings-shipping-price-matrix.html.twig
@@ -293,6 +293,26 @@
                 :placeholder="$tc('sw-settings-shipping.priceMatrix.chooseCustomRule')"
                 @save-rule="(ruleId) => { onSaveCustomShippingRule(ruleId) }"
             >
+                <template #result-item="{ item, index, labelProperty, searchTerm, highlightSearchTerm, isSelected, setValue, getKey }">
+                    <li
+                        is="sw-select-result"
+                        v-tooltip="shippingPriceRuleTooltipConfig(item, isSelected(item))"
+                        :disabled="(usedRules.includes(item.id) && !isSelected(item)) || restrictedShippingMethodRules.includes(item.id)"
+                        :selected="isSelected(item)"
+                        v-bind="{ item, index }"
+                        @item-select="setValue"
+                    >
+                        <sw-highlight-text
+                            v-if="highlightSearchTerm"
+                            :text="getKey(item, labelProperty) || getKey(item, `translated.${labelProperty}`)"
+                            :search-term="searchTerm"
+                        />
+                        <template v-else>
+                            {{ getKey(item, labelProperty) || getKey(item, `translated.${labelProperty}`) }}
+                        </template>
+                    </li>
+                </template>
+
                 <template #rule-modal="{ showRuleModal, onSaveRule, onCloseRuleModal }">
                     <sw-price-rule-modal
                         v-if="showRuleModal"
