--- a/src/Administration/Resources/app/administration/src/module/sw-bulk-edit/page/sw-bulk-edit-product/sw-bulk-edit-product.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-bulk-edit/page/sw-bulk-edit-product/sw-bulk-edit-product.html.twig
@@ -31,11 +31,7 @@
             :disabled="isLoading || !hasSelectedChanges"
             @click="openModal"
         >
-            {{
-                feature.isActive('FEATURE_NEXT_19244')
-                    ? $tc('sw-bulk-edit.applyChanges')
-                    : $tc('sw-settings-basic-information.general.buttonSave')
-            }}
+            {{ $tc('sw-bulk-edit.applyChanges') }}
         </sw-button-process>
         {% endblock %}
     </template>
@@ -62,7 +58,6 @@
 
             {% block sw_bulk_edit_product_content_prices_card %}
             <sw-card
-                v-if="feature.isActive('FEATURE_NEXT_19244')"
                 class="sw-bulk-edit-product-base__prices"
                 position-identifier="sw-bulk-edit-product-prices"
                 :title="$tc('sw-bulk-edit.product.prices.cardTitle')"
@@ -80,7 +75,6 @@
 
             {% block sw_bulk_edit_product_content_advanced_prices_card %}
             <sw-card
-                v-if="feature.isActive('FEATURE_NEXT_19244')"
                 class="sw-bulk-edit-product-base__advanced-prices"
                 position-identifier="sw-bulk-edit-product-advanced-prices"
                 :title="$tc('sw-bulk-edit.product.advancedPrices.cardTitle')"
@@ -145,13 +139,7 @@
                     :title="$tc('sw-bulk-edit.product.advancedPrices.cardTitle')"
                     @modal-close="displayAdvancePricesModal = false"
                 >
-                    <template v-if="feature.isActive('FEATURE_NEXT_19244')">
-                        <sw-product-detail-context-prices :is-set-default-price="true" />
-                    </template>
-
-                    <template v-if="!feature.isActive('FEATURE_NEXT_19244')">
-                        <sw-product-detail-context-prices />
-                    </template>
+                    <sw-product-detail-context-prices :is-set-default-price="true" />
 
                     {% block sw_bulk_edit_product_content_advanced_prices_modal_footer %}
                     <template #modal-footer>
