--- a/src/Administration/Resources/app/administration/src/app/component/structure/sw-admin/sw-admin.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/structure/sw-admin/sw-admin.html.twig
@@ -6,5 +6,6 @@
     <sw-settings-cache-modal v-if="isLoggedIn" />
     <sw-license-violation />
     <sw-hidden-iframes />
+    <sw-modals-renderer />
 </div>
 {% endblock %}
