NEXT-18122 - Implement main module capability extension sdk

--- a/src/Administration/Resources/app/administration/src/module/sw-extension-sdk/page/sw-extension-sdk-module/sw-extension-sdk-module.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-extension-sdk/page/sw-extension-sdk-module/sw-extension-sdk-module.html.twig
@@ -3,7 +3,7 @@
     <template #smart-bar-header>
         {% block sw_extension_sdk_module_header %}
         <template v-if="!isLoading">
-            <h2>{{ module.label }}</h2>
+            <h2>{{ module.heading }}</h2>
         </template>
         {% endblock %}
     </template>
