NEXT-19642 - Remove feature flag for epic NEXT-17973

--- a/src/Administration/Resources/app/administration/src/app/component/form/sw-text-editor/sw-text-editor.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/form/sw-text-editor/sw-text-editor.html.twig
@@ -8,14 +8,7 @@
 
     {% block sw_text_editor_label %}
     <div
-        v-if="!feature.isActive('FEATURE_NEXT_17973') && label.length"
-        class="sw-text-editor__label"
-    >
-        {{ label }}
-    </div>
-
-    <div
-        v-if="feature.isActive('FEATURE_NEXT_17973') && showLabel"
+        v-if="showLabel"
         class="sw-text-editor__label"
     >
         <slot name="label">
