NEXT-19577 - Add misc group to the condition grouping

--- a/src/Administration/Resources/app/administration/src/app/component/form/select/base/sw-grouped-single-select/sw-grouped-single-select.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/form/select/base/sw-grouped-single-select/sw-grouped-single-select.html.twig
@@ -7,7 +7,7 @@
     >
         <li
             v-if="shouldShowGroupTitle(item, index)"
-            class="sw-grouped-single-select__group-separator"
+            :class="getGroupClasses(item)"
             @click.stop
         >
             {{ getGroupLabel(item) }}
