--- a/src/Administration/Resources/app/administration/src/app/component/form/select/base/sw-grouped-single-select/sw-grouped-single-select.scss
+++ b/src/Administration/Resources/app/administration/src/app/component/form/select/base/sw-grouped-single-select/sw-grouped-single-select.scss
@@ -13,3 +13,7 @@
         padding: 5px 16px;
     }
 }
+
+.sw_grouped-single-select_group-misc-separator {
+    border-top: 2px solid $color-darkgray-200;
+}
