--- a/src/Storefront/Resources/views/storefront/layout/footer/footer.html.twig
+++ b/src/Storefront/Resources/views/storefront/layout/footer/footer.html.twig
@@ -2,9 +2,15 @@
     <div class="container">
 
         {% block layout_footer_navigation %}
-            <div id="footerColumns"
-                 class="row footer-columns"
-                 data-collapse-footer="true">
+            <div
+                id="footerColumns"
+                class="row footer-columns"
+                {% if feature('NEXT_19709') %}
+                    data-collapse-footer-columns="true"
+                {% else %}
+                    data-collapse-footer="true"
+                {% endif %}
+            >
                 {% block layout_footer_navigation_hotline %}
                     <div class="col-md-4 footer-column js-footer-column">
                         {% block layout_footer_navigation_hotline_headline %}
