--- a/src/Administration/Resources/app/administration/src/module/sw-flow/component/modals/sw-flow-generate-document-modal/sw-flow-generate-document-modal.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-flow/component/modals/sw-flow-generate-document-modal/sw-flow-generate-document-modal.html.twig
@@ -4,25 +4,12 @@
     :title="$tc('sw-flow.modals.document.titleCreateDocument')"
     @modal-close="onClose"
 >
-    {# @feature-deprecated (FEATURE_NEXT_18083) tag:v6.5.0 - The block content will be remove use block `sw_flow_generate_document_modal_document_type_multiple instead` #}
+    {# @deprecated tag:v6.5.0 - The block content will be remove use block `sw_flow_generate_document_modal_document_type_multiple instead` #}
     {% block sw_flow_generate_document_modal_document_type %}
-    <sw-single-select
-        v-if="!feature.isActive('FEATURE_NEXT_18083')"
-        v-model="documentType"
-        required
-        class="sw-flow-generate-document-modal__type-select"
-        :options="documentTypes"
-        label-property="translated.name"
-        value-property="technicalName"
-        :label="$tc('sw-flow.modals.document.labelDocumentType')"
-        :placeholder="$tc('sw-flow.modals.document.placeholderDocumentType')"
-        :error="fieldError"
-    />
     {% endblock %}
 
     {% block sw_flow_generate_document_modal_document_type_multiple %}
     <sw-multi-select
-        v-if="feature.isActive('FEATURE_NEXT_18083')"
         v-model="documentTypesSelected"
         required
         class="sw-flow-generate-document-modal__type-multi-select"
