NEXT-19181 - fix line break date time based conditions

--- a/src/Administration/Resources/app/administration/src/app/component/rule/condition-type/sw-condition-line-item-creation-date/sw-condition-line-item-creation-date.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/rule/condition-type/sw-condition-line-item-creation-date/sw-condition-line-item-creation-date.html.twig
@@ -13,6 +13,7 @@
         v-model="lineItemCreationDate"
         size="medium"
         date-type="datetime-local"
+        hide-hint
         required
         :disabled="disabled"
     />
