--- a/src/Administration/Resources/app/administration/src/app/component/rule/condition-type/sw-condition-line-item-release-date/sw-condition-line-item-release-date.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/rule/condition-type/sw-condition-line-item-release-date/sw-condition-line-item-release-date.html.twig
@@ -12,6 +12,7 @@
         v-model="lineItemReleaseDate"
         size="medium"
         date-type="datetime-local"
+        hide-hint
         required
         :disabled="disabled"
     />
