--- a/src/Administration/Resources/app/administration/src/app/component/app/sw-app-actions/sw-app-actions.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/app/sw-app-actions/sw-app-actions.html.twig
@@ -1,135 +1,134 @@
 {% block sw_app_actions %}
-<div
-    v-if="areActionsAvailable"
-    class="sw-app-actions"
->
-    <sw-context-button class="sw-app-actions__action-button">
-        <template slot="button">
-            <sw-button>
-                <sw-icon
-                    name="small-more"
-                    size="16"
-                />
-            </sw-button>
-        </template>
-
-        <sw-app-action-button
-            v-for="action in actions"
-            :key="action.id"
-            :action="action"
-            @run-app-action="runAction"
-        />
-    </sw-context-button>
-
-    {% block sw_app_action_modal %}
-    <sw-modal
-        v-if="isOpenModal"
-        class="sw-modal-app-action-button"
-        :class="{ 'is-expanded' : isExpanded}"
-        :variant="size"
-        @modal-close="onCloseModal"
-    >
-        {% block sw_app_action_modal_header %}
-        <template slot="modal-header">
-            {% block sw_app_action_modal_slot_header %}
-            {% block sw_app_action_modal_close %}
-            <div
-                id="modal-app-action-button"
-                class="sw-modal__title"
-            >
-                <img
-                    v-if="action.icon"
-                    class="sw-app-action-button__icon"
-                    :src="`data:image/png;base64, ${action.icon}`"
-                    alt=""
-                >
-                <span>{{ action.app }}</span>
-            </div>
-            {% endblock %}
-
-            {% block sw_app_action_modal_close_button %}
-            <button
-                class="sw-modal__close"
-                :title="$tc('global.sw-modal.labelClose')"
-                :aria-label="$tc('global.sw-modal.labelClose')"
-                @click.prevent="onCloseModal"
-            >
-                {% block sw_app_action_modal_close_icon %}
-                <sw-icon
-                    name="small-default-x-line-medium"
-                    small
-                />
-                {% endblock %}
-            </button>
-            {% endblock %}
-            {% endblock %}
-        </template>
-        {% endblock %}
-
-        {% block sw_app_action_modal_iframe %}
-        <!-- eslint-disable-next-line vuejs-accessibility/iframe-has-title -->
-        <iframe
-            id="app-action-button-iframe"
-            ref="innerFrame"
-            class="sw-app-action-button-iframe"
-            referrerpolicy="origin-when-cross-origin"
-            :src="iframeUrl"
-        ></iframe>
-        {% endblock %}
-    </sw-modal>
-    {% endblock %}
-
-    {% block sw_app_action_modal_confirm %}
-    <sw-modal
-        v-if="isOpenConfirmModal"
-        class="sw-app-action-button-modal-confirm"
-        :title="$tc('sw-app.component.sw-app-actions.closeWindow')"
-        variant="small"
-        @modal-close="onCloseModalConfirm"
-    >
-        <p>{{ $tc('sw-app.component.sw-app-actions.iframeModalConfirmMessage',0, { title: action.app }) }}</p>
-        <p>{{ $tc('sw-app.component.sw-app-actions.iframeModalConfirmMessageDescription') }}</p>
-
-        {% block sw_app_action_modal_confirm_footer %}
-        <template slot="modal-footer">
-            {% block sw_app_action_modal_confirm_checkbox %}
-            <sw-checkbox-field
-                :value="!isShowModalConfirm"
-                @change="onChangeCheckboxShow()"
-            >
-                {% block sw_app_action_modal_confirm_checkbox_label %}
-                <template slot="label">
-                    {{ $tc('sw-app.component.sw-app-actions.dontAskMeAgain') }}
-                </template>
-                {% endblock %}
-            </sw-checkbox-field>
-            {% endblock %}
-
-            {% block sw_app_action_modal_confirm_footer_buttons %}
-            <div class="footer-buttons">
-                {% block sw_app_action_modal_confirm_footer_cancel %}
-                <sw-button
-                    size="small"
-                    @click="onCloseModalConfirm"
-                >
-                    {{ $tc('global.default.cancel') }}
+<div class="sw-app-actions">
+    <template v-if="areActionsAvailable">
+        <sw-context-button class="sw-app-actions__action-button">
+            <template slot="button">
+                <sw-button>
+                    <sw-icon
+                        name="small-more"
+                        size="16"
+                    />
                 </sw-button>
+            </template>
+
+            <sw-app-action-button
+                v-for="action in actions"
+                :key="action.id"
+                :action="action"
+                @run-app-action="runAction"
+            />
+        </sw-context-button>
+
+        {% block sw_app_action_modal %}
+        <sw-modal
+            v-if="isOpenModal"
+            class="sw-modal-app-action-button"
+            :class="{ 'is-expanded' : isExpanded}"
+            :variant="size"
+            @modal-close="onCloseModal"
+        >
+            {% block sw_app_action_modal_header %}
+            <template slot="modal-header">
+                {% block sw_app_action_modal_slot_header %}
+                {% block sw_app_action_modal_close %}
+                <div
+                    id="modal-app-action-button"
+                    class="sw-modal__title"
+                >
+                    <img
+                        v-if="action.icon"
+                        class="sw-app-action-button__icon"
+                        :src="`data:image/png;base64, ${action.icon}`"
+                        alt=""
+                    >
+                    <span>{{ action.app }}</span>
+                </div>
                 {% endblock %}
 
-                {% block sw_app_action_modal_confirm_footer_continue %}
-                <sw-button
-                    variant="primary"
-                    size="small"
-                    @click="onConfirmClose"
+                {% block sw_app_action_modal_close_button %}
+                <button
+                    class="sw-modal__close"
+                    :title="$tc('global.sw-modal.labelClose')"
+                    :aria-label="$tc('global.sw-modal.labelClose')"
+                    @click.prevent="onCloseModal"
                 >
-                    {{ $tc('global.default.close') }}
-                </sw-button>
+                    {% block sw_app_action_modal_close_icon %}
+                    <sw-icon
+                        name="small-default-x-line-medium"
+                        small
+                    />
+                    {% endblock %}
+                </button>
                 {% endblock %}
-            </div>
+                {% endblock %}
+            </template>
             {% endblock %}
-        </template>
+
+            {% block sw_app_action_modal_iframe %}
+            <!-- eslint-disable-next-line vuejs-accessibility/iframe-has-title -->
+            <iframe
+                id="app-action-button-iframe"
+                ref="innerFrame"
+                class="sw-app-action-button-iframe"
+                referrerpolicy="origin-when-cross-origin"
+                :src="iframeUrl"
+            ></iframe>
+            {% endblock %}
+        </sw-modal>
         {% endblock %}
-    </sw-modal>
-    {% endblock %}
+
+        {% block sw_app_action_modal_confirm %}
+        <sw-modal
+            v-if="isOpenConfirmModal"
+            class="sw-app-action-button-modal-confirm"
+            :title="$tc('sw-app.component.sw-app-actions.closeWindow')"
+            variant="small"
+            @modal-close="onCloseModalConfirm"
+        >
+            <p>{{ $tc('sw-app.component.sw-app-actions.iframeModalConfirmMessage',0, { title: action.app }) }}</p>
+            <p>{{ $tc('sw-app.component.sw-app-actions.iframeModalConfirmMessageDescription') }}</p>
+
+            {% block sw_app_action_modal_confirm_footer %}
+            <template slot="modal-footer">
+                {% block sw_app_action_modal_confirm_checkbox %}
+                <sw-checkbox-field
+                    :value="!isShowModalConfirm"
+                    @change="onChangeCheckboxShow()"
+                >
+                    {% block sw_app_action_modal_confirm_checkbox_label %}
+                    <template slot="label">
+                        {{ $tc('sw-app.component.sw-app-actions.dontAskMeAgain') }}
+                    </template>
+                    {% endblock %}
+                </sw-checkbox-field>
+                {% endblock %}
+
+                {% block sw_app_action_modal_confirm_footer_buttons %}
+                <div class="footer-buttons">
+                    {% block sw_app_action_modal_confirm_footer_cancel %}
+                    <sw-button
+                        size="small"
+                        @click="onCloseModalConfirm"
+                    >
+                        {{ $tc('global.default.cancel') }}
+                    </sw-button>
+                    {% endblock %}
+
+                    {% block sw_app_action_modal_confirm_footer_continue %}
+                    <sw-button
+                        variant="primary"
+                        size="small"
+                        @click="onConfirmClose"
+                    >
+                        {{ $tc('global.default.close') }}
+                    </sw-button>
+                    {% endblock %}
+                </div>
+                {% endblock %}
+            </template>
+            {% endblock %}
+        </sw-modal>
+        {% endblock %}
+    </template>
 </div>
 {% endblock %}
