NEXT-17094 - Add equalsAll filter to dpg

--- a/src/Administration/Resources/app/administration/src/module/sw-product-stream/component/sw-product-stream-value/sw-product-stream-value.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-product-stream/component/sw-product-stream-value/sw-product-stream-value.html.twig
@@ -284,7 +284,7 @@
             {% endblock %}
 
             <sw-entity-multi-id-select
-                v-else-if="actualCondition.type === 'equalsAny'"
+                v-else-if="isMultiSelectValue"
                 v-model="multiValue"
                 size="medium"
                 :repository="repository"
