NEXT-19617 - add extensionSDK context infos

--- a/src/Administration/Resources/views/administration/index.html.twig
+++ b/src/Administration/Resources/views/administration/index.html.twig
@@ -16,6 +16,7 @@
         <meta name="msapplication-TileImage" content="{{ asset('static/img/favicon/mstile-150x150.png', '@Administration') }}">
         <meta name="msapplication-TileColor" content="#189eff">
         <meta name="theme-color" content="#189eff">
+        <meta name="referrer" content="always">
     {% endblock %}
 
     <link rel="stylesheet" href="{{ asset('static/css/vendors-node.css', '@Administration') }}">
