--- a/src/Storefront/Resources/views/storefront/layout/navigation/flyout.html.twig
+++ b/src/Storefront/Resources/views/storefront/layout/navigation/flyout.html.twig
@@ -11,8 +11,7 @@
                                 <a class="nav-link"
                                    href="{{ seoUrl('frontend.navigation.page', { navigationId: category.id }) }}"
                                    itemprop="url"
-                                   title="{{ name }}"
-                                   {% if category.linkType == "external" %} rel="noopener noreferrer"{% endif %}>
+                                   title="{{ name }}">
                                     {% block layout_navigation_flyout_bar_category_link_text %}
                                         {{ "general.toCategory"|trans|sw_sanitize }} {{ name }}
                                         {% sw_icon 'arrow-right' style {
@@ -64,9 +63,10 @@
                         {% block layout_navigation_flyout_teaser_image %}
                             <a class="navigation-flyout-teaser-image-container"
                                href="{{ category_url(category) }}"
-                               {% if category_linknewtab(category) %}target="_blank"{% endif %}
-                               title="{{ name }}"
-                               {% if category.linkType == "external" %} rel="noopener noreferrer"{% endif %}>
+                               {% if category_linknewtab(category) %}target="_blank"
+                                   {% if category.linkType == "external" %}rel="noopener noreferrer"{% endif %}
+                               {% endif %}
+                               title="{{ name }}">
                                 {% sw_thumbnails 'navigation-flyout-teaser-image-thumbnails' with {
                                     media: category.media,
                                     sizes: {
