NEXT-19487 - Add @since flag for script hooks

--- a/src/Docs/Resources/templates/Scripts/hook-reference.md.twig
+++ b/src/Docs/Resources/templates/Scripts/hook-reference.md.twig
@@ -12,6 +12,7 @@
 | <!-- -->               | <!-- -->                                                                                                                                                             |
 |:-----------------------|:---------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | **Name**               | {{ hook.name }}                                                                                                                                                      |
+| **Since**              | {{ hook.since }}                                                                                                                                                     |
 | **Class**              | `{{ hook.class }}`                                                                                                                                                   |
 | **Description**        | {{ hook.trigger|raw }}                                                                                                                                               |
 | **Available Data**     | {% for data in hook.data %}{{ data.name }}: {% if data.link is not null %}[`{{ data.type }}`]({{ data.link }}){% else %}`{{ data.type }}`{% endif %} <br>{% endfor%} |
