--- a/src/Administration/Resources/app/administration/src/module/sw-first-run-wizard/view/sw-first-run-wizard-data-import/sw-first-run-wizard-data-import.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-first-run-wizard/view/sw-first-run-wizard-data-import/sw-first-run-wizard-data-import.html.twig
@@ -90,7 +90,7 @@
         v-else
         class="installing-plugin"
     >
-        <sw-loader size="48" />
+        <sw-loader size="48px" />
         <p
             class="sw-loader-info-text"
             v-html="$tc('sw-first-run-wizard.dataImport.loadingMessage')"
