--- a/src/Administration/Resources/app/administration/src/module/sw-first-run-wizard/view/sw-first-run-wizard-finish/sw-first-run-wizard-finish.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-first-run-wizard/view/sw-first-run-wizard-finish/sw-first-run-wizard-finish.html.twig
@@ -53,7 +53,7 @@
         v-if="restarting"
         class="restart-progress"
     >
-        <sw-loader size="48" />
+        <sw-loader size="48px" />
         <p
             class="sw-loader-info-text"
             v-html="$tc('sw-first-run-wizard.finish.loadingMessage')"
