--- a/src/Administration/Resources/app/administration/src/module/sw-first-run-wizard/view/sw-first-run-wizard-paypal-info/sw-first-run-wizard-paypal-info.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-first-run-wizard/view/sw-first-run-wizard-paypal-info/sw-first-run-wizard-paypal-info.html.twig
@@ -68,7 +68,7 @@
         v-else
         class="sw-first-run-wizard-paypal-install"
     >
-        <sw-loader size="48" />
+        <sw-loader size="48px" />
         <p
             class="sw-loader-info-text"
             v-html="$tc('sw-first-run-wizard.paypalInstall.loadingMessage')"
