--- a/src/Administration/Resources/app/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo-usage/sw-media-quickinfo-usage.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo-usage/sw-media-quickinfo-usage.html.twig
@@ -3,7 +3,7 @@
     {% block sw_media_quickinfo_usage_loader %}
     <sw-loader
         v-if="isLoading"
-        size="30"
+        size="30px"
         class="sw-media-quickinfo-usage__loading-indicator"
     />
     {% endblock %}
