--- a/src/Administration/Resources/app/administration/src/app/component/tree/sw-tree-item/sw-tree-item.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/tree/sw-tree-item/sw-tree-item.html.twig
@@ -29,7 +29,7 @@
             {% block sw_tree_item_element_toggle_loader %}
             <sw-loader
                 v-if="isLoading"
-                size="14"
+                size="14px"
             />
             {% endblock %}
 
