--- a/src/Administration/Resources/app/administration/src/module/sw-sales-channel/component/structure/sw-sales-channel-menu/sw-sales-channel-menu.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-sales-channel/component/structure/sw-sales-channel-menu/sw-sales-channel-menu.html.twig
@@ -10,10 +10,8 @@
     {% block sw_sales_channel_menu_headline %}
     <div class="sw-admin-menu__headline">
         {% block sw_sales_channel_menu_headline_text %}
-        <div class="collapsible-text sw-admin-menu__headline_text">
-            <router-link
-                :to="{ name: 'sw.sales.channel.list' }"
-            >{{ $tc('sw-sales-channel.general.titleMenuItems') }}</router-link>
+        <div class="collapsible-text">
+            {{ $tc('sw-sales-channel.general.titleMenuItems') }}
         </div>
         {% endblock %}
 
@@ -52,30 +50,8 @@
     {% block sw_sales_channel_menu_navigation %}
     <nav class="sw-admin-menu__navigation">
 
-        {% block sw_sales_channel_menu_navigation_loader %}
-        <sw-loader v-if="loading" />
-        {% endblock %}
-
-        {% block sw_sales_channel_menu_navigation_emptyspace %}
-        <div
-            v-if="salesChannels.length === 0"
-            class="sw-sales-channel-menu__whitespacing collapsible-text"
-        >
-            <p class="sw-sales-channel-menu__whitespacing-text">
-                {{ $tc('sw-sales-channel.menu.emptyspaceMessage') }}
-            </p>
-
-            <sw-internal-link :router-link="{ name: 'sw.sales.channel.list' }">
-                {{ $tc('sw-sales-channel.menu.emptyspaceLink') }}
-            </sw-internal-link>
-        </div>
-        {% endblock %}
-
         {% block sw_sales_channel_menu_navigation_main_list %}
-        <ul
-            v-else
-            class="sw-admin-menu__navigation-list"
-        >
+        <ul class="sw-admin-menu__navigation-list">
 
             {% block sw_sales_channel_menu_navigation_main_items %}
             <sw-admin-menu-item
@@ -114,20 +90,6 @@
             />
             {% endblock %}
         </ul>
-        {% endblock %}
-
-        {% block sw_sales_channel_menu_context_button_collapsed %}
-        <sw-context-button
-            class="sw-sales-channel-menu__collapsed-context-menu"
-            icon="default-action-more-vertical"
-        >
-            <sw-context-menu-item
-                class="sw-admin-menu__headline-context-menu-manage-sales-channels"
-                :router-link="{ name: 'sw.sales.channel.list' }"
-            >
-                {{ $tc('sw-sales-channel.general.manageSalesChannels') }}
-            </sw-context-menu-item>
-        </sw-context-button>
         {% endblock %}
     </nav>
     {% endblock %}
